src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBinding_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBinding_StringErrorContext.class */
public final class ARBVertexAttribBinding_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindVertexBuffer(IIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexAttribFormat(IIIZI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexAttribIFormat(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexAttribLFormat(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexAttribBinding(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexBindingDivisor(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayBindVertexBufferEXT(IIIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayVertexAttribFormatEXT(IIIIZI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayVertexAttribIFormatEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayVertexAttribLFormatEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayVertexAttribBindingEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        methods.put("glVertexArrayVertexBindingDivisorEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBVertexAttribBindingErrorContext");
        return methods;
    }
}
